fix contrast in both modes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,7 +43,7 @@ html {
 
 html.dark {
   background: #16171d;
-  color: #fff;
+  // color: #fff;
 
   #subsection_header {
     background-color: rgba(22, 23, 29, .5)
